--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -28,7 +32,7 @@ button {
 }
 
 img {
-  display: block;
+  display: flex;
   max-width: 100%;
   height: auto;
 }
