--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,13 +6,50 @@
 */
 /* Common styles */
 @import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
 /* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+/* @import url('./header.css'); */
+@import 'simplelightbox/dist/simple-lightbox.min.css';
+
+body {
+  margin: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+  color: #212121;
+  line-height: 1.5;
+}
+
+img {
+  display: flex;
+  object-fit: scale-down;
+  margin: 0px;
+  width: 100%;
+}
+.gallery {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 0;
+  margin: 100px 156px;
+}
+li {
+  width: calc((100% - 48px) / 3);
+  align-content: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+.gallery-link {
+  /* cursor: pointer; */
+  margin: 0;
+}
+
+.modal {
+  background-color: #2e2f42cc;
+  display: flex;
+  align-content: center;
+}
