--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,8 @@
 @import url('./reset.css');
 
 /* Sections style */
-/* @import url('./header.css'); */
-@import 'simplelightbox/dist/simple-lightbox.min.css';
+
+/* @import 'simplelightbox/dist/simple-lightbox.min.css'; */
 
 body {
   margin: 16px;
