--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
+@import url("./reset.css");
 
 /* Sections style */
 
@@ -13,8 +13,8 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -48,8 +48,13 @@ li {
   margin: 0;
 }
 
-.modal {
+/* .modal {
   background-color: #2e2f42cc;
   display: flex;
   align-content: center;
+} */
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
 }
