--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@
 /* Sections style */
 
 /* @import 'simplelightbox/dist/simple-lightbox.min.css'; */
+@import "simplelightbox/dist/simple-lightbox.min.css";
 
 body {
   margin: 16px;
